--- a/profil.html
+++ b/profil.html
@@ -10,6 +10,7 @@
 
     <!-- CSS Kel 12 -->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="kostom.css">
     <link rel="stylesheet" href="fa/css/all.css">
 
     <title>Kata Pengantar | Universitas SANATA DHARMA</title>
@@ -36,125 +37,86 @@
   <!-- Akhir Navbar -->
   
   <!-- Jumbotron -->
-  <div class="jumbotron-side">
-      <div class="container">
-        <h1 class="display-4">Struktur organisasi</h1>
-      </div>
-  </div>
-  <!-- Akhir Jumbotron -->
- 
-  
-  <!-- Submenu -->
-  <nav class="navbar navbar-expand navbar-dark nav-bot justify-content-center nav-fill">
-    <div class="navbar-nav nav-box">
-      <a class="nav-item nav-link active" href="mhs-login.html">Mahasiswa</a>
-      <a class="nav-item nav-link" href="dosen.html">Dosen</a>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Fakultas</a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Fakultas Ilmu Komputer</a>
-          <a class="dropdown-item" href="#">Fakultas Sains dan Teknologi</a>
-          <a class="dropdown-item" href="#">Fakultas Ekonomi dan Sosial</a>
-        </div>
-    </div>
-      </li>
-      <div class="navbar-nav nav-box">
-      <a class="nav-item nav-link" href="404.html">Open Jurnal</a>
-      <a class="nav-item nav-link" href="404.html">Alumni</a>
-      <a class="nav-item nav-link" href="404.html">Mitra</a>
-      </div>
-  </nav>
-  <!-- Akhir Submenu -->
+  <!-- <div class="jumbotron-side">
+      <div class="container"> -->
+        
+      <section class="org-structure container" id="org-structure">
+        <h2>Struktur Organisasi <span class="br">HMIF 2023</span></h2>
+        <div class="org-structure-item">
+          <div class="title">Pengurus Inti</div>
+          <div class="org-structure-wrapper">
 
-  <!-- Konten Profil -->
-    <div id ="konten" class="container-fluid">
-      <div class="container">
-        <div class="row all">
-          <div class="col-md-12">
-            <h4 class="judul">Kata Pengantar</h4>
-            <div class="kata-pengantar">
-              <figure class="foto-rektor">
-              <img src="img/pfl/kpt1.png" class="rounded float-left img-fluid" width="265px" height="305px">
-              <figcaption>Prof. Dr. Mohammad Suyanto, MM.<br>Rektor</figcaption>
-              </figure>
-              </div>
-              <div class="isi-kata-pengantar">
-                <p>Bidang ekonomi kreatif merupakan bidang keahlian masa yang memiliki posisi yang sangat
-                    strategis dalam menunjang kemajuan di segala bidang kehidupan.</p>
-                    <p>Sebagai bangsa yang besar dan memiliki populasi angkatan muda yang
-                        besar, Indonesia adalah masa depan dunia. Komposisi tersebut membuat
-                        indonesia disebut memiliki bonus demografi yang dimasa kini dan masa
-                        mendatang berpotensi untuk memiliki peran strategis di kawasan. Ekonomi
-                        dunia telah menyaksikan tergesernya konsentrasi penguasaan perusahaan
-                        energi kepada perusahaan berbasis ekonomi kreatif. Perubahan ini mempengaruhi konstelasi dunia termasuk naiknya ranking perusahaan ekonomi kreatif ke puncak ranking yang di rilis oleh
-                        majalah ekonomi terkemuka seperti Forbes.</p>
-                        <p>Kondisi global ini harus mendapatkan respon positif dari pelaku ekonomi dan pendidikan dalam negeri untuk mengambil bagian penting dari transisi tersebut. AMIKOM Yogyakarta sebagai salah satu lembaga pendidikan tinggi berupaya
-                            mengambil peran untuk menyiapkan sumber daya manusia dalam bidang ekonomi kreatif untuk menyambut tantangan
-                            tersebut.</p>
-                            <p>Universitas AMIKOM Yogyakarta memberanikan diri mencanangkan visi “Menjadi Universitas kelas dunia yang unggul
-                                dalam bidang ekonomi kreatif yang berbasis entrepreneurship (private entrepreneur university)”. Dalam rangka menggapai visi tersebut kerja keras dilakukan segenap civitas akademika untuk menyajikan yang terbaik. Beberapa prestasi
-                                tingkat nasional dan internasional telah diraih dalam berbagai bidang.</p>
-                                <p>Salah satu upaya untuk menyesuaikan dengan tuntutan kebutuhan dunia kerja, kurikulum yang diterapkan di universitas
-                                    AMIKOM didesain untuk secara adaptif mengakomodasi dinamika internal dan eksternal. Kebijakan tersebut semata
-                                    mata diambil agar bekal ilmu yang diberikan kepada mahasiswa sesuai yang dibutuhkan oleh dunia industri dan tuntutan
-                                    lingkungan bisnis di era ekonomi kreatif.</p>
-                                    <p>Demikian gambaran bidang ekonomi kreatif yang akan digeluti. Dalam buku panduan ini tersedia panduan administratif
-                                        maupun di bidang akademis bagi Anda yang dapat menjadi pedoman selama menjadi mahasiswa. Semoga buku ini
-                                        dapat bermanfaat, dan sekali lagi selamat untuk Anda.</p>
-                                        <p>Yogyakarta, Agustus 2018 <br> Rektor Universitas AMIKOM Yogyakarta,</p>
-                                        <p>Prof. Dr. Mohammad Suyanto, MM.</p>
-              </div>
+            <div class="structure-card">
+              <img src="img/hm/foto-panitia/sasa.jpg" alt="">
+              <h3>Shasa</h3>
+              <p>Sekretaris</p>
+            </div>
+
+            <div class="structure-card">
+              <img src="img/hm/foto-panitia/yogtan.jpg" alt="">
+              <h3>YOGTAN</h3>
+              <p>Ketua Umum</p>
+            </div>
+
+            <div class="structure-card">
+              <img src="img/hm/foto-panitia/elvina.jpg" alt="">
+              <h3>Elvina</h3>
+              <p>Bendahara</p>
+            </div>
+
+            <div class="structure-card">
+              <img src="img/hm/foto-panitia/advo-dinan.png" alt="">
+              <h3>Cinta</h3>
+              <p>Wakil</p>
+            </div>
+
           </div>
-        </div>
-        <a class="btn tombol show-more">Show More</a>
-        <div class="row all" style="margin-top: 100px;">
-          <div class="col-md-12">
-            <h4 class="Judul">Visi,Misi,Tujuan</h4>
-            <div class="visi-misi-tujuan">
-              <h1>Visi</h1>
-              <p>Menjadi salah satu universitas unggulan dunia dalam bidang teknologi informasi, komunikasi dan bisnis berbasis moral dan entrepreneurship.</p>
-              <h1>Misi</h1>
-              <ol>
-                <li>Menyelenggarakan pendidikan tinggi kelas dunia di bidang teknologi informasi, komunikasi dan bisnis berbasis moral dan entrepreneurship.</li>
-                <li>Melaksanakan penelitian penelitian dalam bidang teknologi informasi, komunikasi dan bisnis berkualitas dunia yang dapat berperan meningkatkan daya saing nasional.</li>
-                <li>Menyelenggarakan layanan pengabdian kepada masyarakat secara profesional dalam rangka ikut memecahkan persoalan dunia maupun nasional, terutama dalam bidang teknologi informasi, komunikasi dan bisnis.</li>
-                <li>Menyelenggarakan pendidikan berstandar global melalui kemitraan dan jejaring nasional, regional maupun global.</li>
-              </ol>
-              <h1>Tujuan</h1>
-              <ol>
-                <li>Menghasilkan lulusan yang berkualitas global, bermoral tinggi, berjiwa entrepreneur dan profesional dalam disiplin ilmu teknologi informasi, komunikasi dan bisnis.</li>
-                <li>Menghasilkan penelitian dan produk teknologi informasi, komunikasi dan bisnis berkualitas global yang dapat berperan meningkatkan daya saing nasional.</li>
-                <li>Menyelenggarakan layanan pengabdian kepada masyarakat secara profesional dalam rangka ikut memecahkan persoalan global maupun nasional, terutama dalam bidang teknologi informasi, komunikasi dan bisnis.</li>
-                <li>Menyelenggarakan pendidikan berstandar global melalui kemitraan dan jejaring nasional, regional maupun global.</li>
-              </ol>
-              <h1>Sasaran Universitas Amikom Yogyakarta 5 tahun ke depan</h1>
-              <ol>
-                <li>Terwujudnya lulusan yang berkualitas global, berjiwa entrepreneur dan profesional dalam disiplin ilmu teknologi informasi, komunikasi dan bisnis</li>
-                <li>Terwujudnya penelitian dan produk teknologi informasi, komunikasi dan bisnis berkualitas global yang dapat berperan meningkatkan daya saing nasional.</li>
-                <li>Terwujudnya layanan pengabdian kepada masyarakat secara profesional dalam rangka ikut memecahkan persoalan global maupun nasional, terutama dalam bidang teknologi informasi, komunikasi dan bisnis.</li>
-                <li>Terwujudnya pendidikan berstandar global melalui kemitraan dan jejaring nasional, regional maupun global.</li>
-              </ol>
+          <div class="org-structure-wrapper ">
+            <div class="structure-card structure-card-co">
+              <img src="assets/advo-dinan.png" alt="">
+              <h3>Lalu Herdinan E.T.</h3>
+              <p>CO Advokasi</p>
+            </div>
+            <div class="structure-card structure-card-co">
+              <img src="assets/sekret-dedy.png" alt="">
+              <h3>Dedy Razuna A.</h3>
+              <p>CO Kesekretariatan</p>
+            </div>
+            <div class="structure-card structure-card-co">
+              <img src="assets/organ-aura.png" alt="">
+              <h3>Aura Trisdayanti</h3>
+              <p>CO Organisasi</p>
+            </div>
+            <div class="structure-card structure-card-co">
+              <img src="assets/pemda-indira.png" alt="">
+              <h3>Indra Yunia</h3>
+              <p>CO Pemberdayaan Anggota</p>
             </div>
           </div>
         </div>
-        <a class="btn tombol show-more">Show More</a>
-        <div class="row all" style="margin-top: 100px;">
-        <div class="col-md-12">
-          <h4 class="Judul">Sejarah</h4>
-          <img src="img/pfl/sjr1.png" class="rounded mx-auto d-block" width="440px" height="280px">
-          <div class="isi-sejarah">
-            <p>Universitas Amikom Yogyakarta merupakan perubahan dari Sekolah Tinggi Manajemen Informatika dan Komputer Amikom Yogyakarta. Sebelumnya Sekolah Tinggi Manajemen Informatika dan Komputer Amikom Yogyakarta, merupakan perubahan dari Akademi Manajemen Informatika dan Komputer Amikom Yogyakarta yang mendapatkan status terdaftar berdasarkan Surat Keputusan Menteri Pendidikan dan Kebudayaan Republik Indonesia No. 084/D/O/1994 tanggal 11 Oktober 1994. Perubahan bentuk ini dilakukan untuk mempermudah mencapai visinya sebagai perguruan tinggi unggulan dunia dalam bidang ekonomi kreatif berbasis entrepreneurship.</p>
-            <p>Universitas Amikom Yogyakarta yang sebelumnya Sekolah Tinggi Manajemen Informatika dan Komputer Amikom Yogyakarta telah menjadi Perguruan Tinggi Swasta Percontohan Dunia Model Private Entrepreneur oleh UNESCO (Unesco, A New Dynamic : Private Higher Education, 2009) dan juga menjadi Top 100 Perguruan Tinggi di Asia Tenggara versi Webometrics (Webometrics, 2014). Perguruan Tinggi tersebut juga telah meraih 20 penghargaan internasional dan lebih dari 50 penghargaan nasional serta menghasilkan 24% lulusannya sebagai pengusaha (Business Placement Center AMIKOM, 2014). Perguruan Tinggi telah terakreditasi institusi B dan telah mendapatkan sertifikasi ISO 2009.</p>
-            <p>Universitas Amikom Yogyakarta mempunyai peranan yang besar dalam dunia pendidikan sebagai pusat pengembangan ekonomi kreatif untuk meningkatkan daya saing bangsa, telah membuktikan mampu mengatasi berbagai kesulitan dan hambatan dalam pengelolaannya.Saat ini kepercayaan masyarakat cukup baik, dibuktikan diantaranya dengan meningkatnya jumlah mahasiswa dari tahun ketahun pada 2014 mempunyai 12.882 mahasiswa untuk Program Studi. Mulai dari Program Studi Diploma III Manajemen Informatika, Program Studi Diploma III Teknik Informatika, Program Studi S1 Sistem Informasi, Program Studi S1 Teknik Informatika dan Program Studi S2 Magister Teknik Informatika. Bahkan Program Magister Teknik Informatika dipercaya oleh Direktorat Jendral pendidikan Tinggi dikala itu bersama 5 Perguruan Tinggi lain seperti (Universitas Indonesia, Universitas Gadjah Mada, Institut Teknologi Bandung, Institut Sepuluh November Surabaya dan Universitas Bina Nusantara) yang diberikan hibah sebagai proyek percontohan Pendidikan Jarak Jauh (PJJ).</p>
-            <p>Pada masa mendatang, Universitas Amikom berkeinginan untuk tetap lebih maju sesuai dengan jaman dan tantangannya yang terus berubah. Oleh karenanya dengan semakin berkembang dan dewasanya Universitas Amikom Yogyakarta serta kebutuhan untuk memenuhi kepercayaan masyarakat dan tuntutan perubahan jaman yang sulit diprediksi, diperlukan strategi dan sasaran pengembangan yang terencana, sistematis dan terukur. Dengan memanfaatkan berbagai keunggulan strategis yang dimiliki secara optimal, evaluasi kondisi saat ini serta berpijak pada visi dan misi Universitas Amikom Yogyakarta, maka perlu disusun sebuah rencana strategis yang akan memberikan arah serta menjadi acuan bagi Universitas Amikom Yogyakarta dalam perjalanan kedepan.</p>
+        
+        <div class="org-structure-item">
+          <div class="title">Pengurus Divisi</div>
+          <div class="org-structure-wrapper">
+            <div class="structure-card structure-card-division" onclick="location='divisi.html#divisi-pemda'">
+              <img src="assets/advo.png" alt="">
+              <h3>Divisi Advokasi</h3>
+            </div>
+            <div class="structure-card structure-card-division" onclick="location='divisi.html#divisi-pemda'">
+              <img src="assets/organ.png" alt="">
+              <h3>Divisi Organisasi</h3>
+            </div>
+            <div class="structure-card structure-card-division" onclick="location='divisi.html#divisi-pemda'">
+              <img src="assets/pemda.png" alt="">
+              <h3>Divisi Pemberdayaan Anggota</h3>
+            </div>
+            <div class="structure-card structure-card-division" onclick="location='divisi.html#divisi-pemda'">
+              <img src="assets/kesek.png" alt="">
+              <h3>Divisi Kesekretariatan</h3>
             </div>
           </div>
         </div>
-        <a id="" class="btn tombol show-more">Show More</a>
-      </div>
-    </div>
-    <!-- Akhir Konten Profil -->
-
+      </section>
   <!-- Footer -->
   <footer>
     <div class="footer-body">
