new file:   img/hm/Bulat Department/KWU.png 	new file:   img/hm/Bulat Department/Kaderisasi.png 	new file:   img/hm/Bulat Department/MediaInformasi.png 	new file:   img/hm/Bulat Department/MinatBakat.png 	new file:   img/hm/Bulat Department/Sosial.png 	new file:   img/hm/Bulat Panti&Kadep/Ardi.png 	new file:   img/hm/Bulat Panti&Kadep/Cinta.png 	new file:   img/hm/Bulat Panti&Kadep/Elvina.png 	new file:   img/hm/Bulat Panti&Kadep/Felis.png 	new file:   img/hm/Bulat Panti&Kadep/Jesly.png 	new file:   img/hm/Bulat Panti&Kadep/Sasha.png 	new file:   img/hm/Bulat Panti&Kadep/Tyas.png 	new file:   img/hm/Bulat Panti&Kadep/Wenda.png 	new file:   img/hm/Bulat Panti&Kadep/Yogtan.png 	modified:   index.html 	modified:   kostom.css 	modified:   profil.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- CSS Kel 12 -->
   <link rel="stylesheet" href="style.css">
 
-  <title>Universitas SANATA SHARMA</title>
+  <title>Himpunan Mahasiswa Informatika</title>
 </head>
 
 <body>
