--- a/profil.html
+++ b/profil.html
@@ -1,29 +1,32 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- CSS Kel 12 -->
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="kostom.css">
-    <link rel="stylesheet" href="fa/css/all.css">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="css/bootstrap.min.css">
 
-    <title>Kata Pengantar | Universitas SANATA DHARMA</title>
-  </head>
-  <body id="kel12">
+  <!-- CSS Kel 12 -->
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="kostom.css">
+  <link rel="stylesheet" href="fa/css/all.css">
+
+  <title>Kata Pengantar | Universitas SANATA DHARMA</title>
+</head>
+
+<body id="kel12">
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark nav-top navbar-shrink nav-side">
-      <a class="navbar-brand" href="#"><img width="200px" src="img/hm/logo_usd.png" alt="logo"></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <a class="navbar-brand" href="#"><img width="200px" src="img/hm/logo_usd.png" alt="logo"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ml-auto">
         <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link" href="profil.html">Kepengurusan</a>
@@ -35,101 +38,137 @@
     </div>
   </nav>
   <!-- Akhir Navbar -->
-  
+
   <!-- Jumbotron -->
   <!-- <div class="jumbotron-side">
       <div class="container"> -->
-        
-      <section class="org-structure container" id="org-structure">
-        <h2>Struktur Organisasi <span class="br">HMIF 2023</span></h2>
-        <div class="org-structure-item">
-          <div class="title">Pengurus Inti</div>
-          <div class="org-structure-wrapper">
 
-            <div class="structure-card">
-              <img src="img/hm/foto-panitia/sasa.jpg" alt="">
-              <h3>Shasa</h3>
-              <p>Sekretaris</p>
-            </div>
+  <section class="org-structure container" id="org-structure">
+    <div class="font-weight-bold">
+      <h2>STRUKTUR ORGANISASI
+        <span class="br">HMIF 2023</span>
+      </h2>
+    </div>
+    <div class="org-structure-item">
+      <div class="title">Pengurus Inti</div>
+      <div class="org-structure-wrapper">
 
-            <div class="structure-card">
-              <img src="img/hm/foto-panitia/yogtan.jpg" alt="">
-              <h3>YOGTAN</h3>
-              <p>Ketua Umum</p>
-            </div>
 
-            <div class="structure-card">
-              <img src="img/hm/foto-panitia/elvina.jpg" alt="">
-              <h3>Elvina</h3>
-              <p>Bendahara</p>
-            </div>
-
-            <div class="structure-card">
-              <img src="img/hm/foto-panitia/advo-dinan.png" alt="">
-              <h3>Cinta</h3>
-              <p>Wakil</p>
-            </div>
-
-          </div>
-          <div class="org-structure-wrapper ">
-            <div class="structure-card structure-card-co">
-              <img src="assets/advo-dinan.png" alt="">
-              <h3>Lalu Herdinan E.T.</h3>
-              <p>CO Advokasi</p>
-            </div>
-            <div class="structure-card structure-card-co">
-              <img src="assets/sekret-dedy.png" alt="">
-              <h3>Dedy Razuna A.</h3>
-              <p>CO Kesekretariatan</p>
-            </div>
-            <div class="structure-card structure-card-co">
-              <img src="assets/organ-aura.png" alt="">
-              <h3>Aura Trisdayanti</h3>
-              <p>CO Organisasi</p>
-            </div>
-            <div class="structure-card structure-card-co">
-              <img src="assets/pemda-indira.png" alt="">
-              <h3>Indra Yunia</h3>
-              <p>CO Pemberdayaan Anggota</p>
-            </div>
-          </div>
+        <div class="structure-card">
+          <img src="img/hm/Bulat Panti&Kadep/Sasha.png" alt="">
+          <h3>Shasa</h3>
+          <p>Sekretaris</p>
         </div>
-        
-        <div class="org-structure-item">
-          <div class="title">Pengurus Divisi</div>
-          <div class="org-structure-wrapper">
-            <div class="structure-card structure-card-division" onclick="location='divisi.html#divisi-pemda'">
-              <img src="assets/advo.png" alt="">
-              <h3>Divisi Advokasi</h3>
-            </div>
-            <div class="structure-card structure-card-division" onclick="location='divisi.html#divisi-pemda'">
-              <img src="assets/organ.png" alt="">
-              <h3>Divisi Organisasi</h3>
-            </div>
-            <div class="structure-card structure-card-division" onclick="location='divisi.html#divisi-pemda'">
-              <img src="assets/pemda.png" alt="">
-              <h3>Divisi Pemberdayaan Anggota</h3>
-            </div>
-            <div class="structure-card structure-card-division" onclick="location='divisi.html#divisi-pemda'">
-              <img src="assets/kesek.png" alt="">
-              <h3>Divisi Kesekretariatan</h3>
-            </div>
-          </div>
+
+        <div class="structure-card">
+          <img src="img/hm/Bulat Panti&Kadep/Yogtan.png" alt="">
+          <h3>YOGTAN</h3>
+          <p>Ketua</p>
         </div>
-      </section>
-  <!-- Footer -->
+
+        <div class="structure-card">
+          <img src="img/hm/Bulat Panti&Kadep/Cinta.png" alt="">
+          <h3>Cinta</h3>
+          <p>Wakil</p>
+        </div>
+
+        <div class="structure-card">
+          <img src="img/hm/Bulat Panti&Kadep/Elvina.png" alt="">
+          <h3>Elvina</h3>
+          <p>Bendahara</p>
+        </div>
+
+
+      </div>
+      <div class="org-structure-wrapper ">
+        <div class="structure-card structure-card-co">
+          <img src="img/hm/Bulat Panti&Kadep/Jesly.png" alt="">
+          <h3>Jesly</h3>
+          <p>Media Informasi</p>
+        </div>
+
+        <div class="structure-card structure-card-co">
+          <img src="img/hm/Bulat Panti&Kadep/Wenda.png" alt="">
+          <h3>Wenda</h3>
+          <p>Kaderisasi</p>
+        </div>
+
+        <div class="structure-card structure-card-co">
+          <img src="img/hm/Bulat Panti&Kadep/Ardi.png" alt="">
+          <h3>Ardi</h3>
+          <p>Sosial</p>
+        </div>
+
+        <div class="structure-card structure-card-co">
+          <img src="img/hm/Bulat Panti&Kadep/Tyas.png" alt="">
+          <h3>Tyas</h3>
+          <p>Minat Bakat</p>
+        </div>
+
+        <div class="structure-card structure-card-co">
+          <img src="img/hm/Bulat Panti&Kadep/Felis.png" alt="">
+          <h3>Felis</h3>
+          <p>Kewirausahaan</p>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="org-structure-item">
+      <div class="title">Pengurus Divisi</div>
+      <div class="org-structure-wrapper">
+
+
+        <div class="structure-card structure-card-division" onclick="location='divisi.html#divisi-pemda'">
+          <img src="img/hm/Bulat Department/Kaderisasi.png" alt="">
+          <h3>Divisi Kaderisasi</h3>
+        </div>
+
+
+
+        <div class="structure-card structure-card-division" onclick="location='divisi.html#divisi-pemda'">
+          <img src="img/hm/Bulat Department/MinatBakat.png" alt="">
+          <h3>Divisi MinatBakat</h3>
+        </div>
+
+        <div class="structure-card structure-card-division" onclick="location='divisi.html#divisi-pemda'">
+          <img src="img/hm/Bulat Department/MediaInformasi.png" alt="">
+          <h3>Divisi MediaInformasi</h3>
+        </div>
+      </div>
+    </div>
+
+    <div class="org-structure-item">
+      <div class="org-structure-wrapper">
+
+        <div class="structure-card structure-card-division" onclick="location='divisi.html#divisi-pemda'">
+          <img src="img/hm/Bulat Department/Sosial.png" alt="">
+          <h3>Divisi Sosial</h3>
+        </div>
+
+        <div class="structure-card structure-card-division" onclick="location='divisi.html#divisi-pemda'">
+          <img src="img/hm/Bulat Department/KWU.png" alt="">
+          <h3>Divisi Kewirausahaan</h3>
+        </div>
+
+      </div>
+    </div>
+
+
+    </div>
+  </section>
   <footer>
     <div class="footer-body">
       <div class="container">
         <div class="row">
           <div class="col-md-4 col-sm-6">
-            <img class="footer-brand" src="img/logo_amikom_satu_warna.png" alt="Universitas AMIKOM Yogyakarta">
+            <img class="footer-brand" src="img/hm/Logo HMIF remove remove.png" alt="Universitas AMIKOM Yogyakarta">
             <div class="alamat">
-              <h6>UNIVERSITAS AMIKOM YOGYAKARTA</h6>
-              <p>Jl. Ring Road Utara, Condong Catur, Sleman, Yogyakarta</p>
-              <p>(0274) 884201 - 207</p>
-              <p>Fax: (0274) 884208 Kodepos: 55283</p>
-              <p>E-Mail: amikom@amikom.ac.id</p>
+              <h6>UNIVERSITAS SANATA DHARMA</h6>
+              <p>Jl. Paingan, Krodan, Maguwoharjo, Kec. Depok, Kabupaten Sleman, Daerah Istimewa Yogyakarta 55281</p>
+              <p>(0274)883037</p>
+              <p>Fax: (0274) 884208 Kodepos: 55281</p>
+              <p>E-Mail: HMIF@gmail.com</p>
             </div>
           </div>
           <div class="col-md-8 col-sm-6">
@@ -140,8 +179,6 @@
                 <div class="menu-footer">
                   <ul class="menu">
                     <li><a href="">University Link</a></li>
-                    <li><a href="">Suyanto Consulting</a></li>
-                    <li><a href="">Battle of Surabaya</a></li>
                   </ul>
                 </div>
               </div>
@@ -150,23 +187,8 @@
                 <h6 class="judul-menu">Halaman Pendukung</h6>
                 <div class="menu-footer">
                   <ul class="menu">
-                    <li><a href="">Mobile</a></li>
                     <li><a href="maps.html">Maps</a></li>
-                    <li><a href="">FAQ</a></li>
-                    <li><a href="">Support Online</a></li>
                     <li><a href="">Mail</a></li>
-                    <li><a href="">RSS</a></li>
-                  </ul>
-                </div>
-              </div>
-              <div class="col-md-4 col-sm-4">
-                <div class="judul-footer"></div>
-                <h6 class="judul-menu">Menu</h6>
-                <div class="menu-footer">
-                  <ul class="menu">
-                    <li><a href="">Sitemap</a></li>
-                    <li><a href="">Contact</a></li>
-                    <li><a href="">English Version</a></li>
                   </ul>
                 </div>
               </div>
@@ -179,21 +201,27 @@
       <div class="container">
         <div class="row">
           <div class="col-md-9">
-            <p class="copyright">© Universitas Amikom Yogyakarta</p>
+            <p class="copyright">© HMIF USD</p>
           </div>
         </div>
       </div>
     </div>
   </footer>
   <!-- Akhir Footer -->
-  
-  
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script>
+
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+  <script>
 
     var contents = document.getElementsByClassName("all");
     var buttons = document.getElementsByClassName("show-more");
@@ -202,7 +230,7 @@
       // "let" creates locally scoped variables for use in the function.
       let content = contents[i];
       let button = buttons[i];
-      button.onclick = function() {
+      button.onclick = function () {
         if (content.className == "open") {
           //shrink the box
           content.className = "all";
@@ -214,6 +242,7 @@
         }
       };
     }
-    </script>
-  </body>
+  </script>
+</body>
+
 </html>
