--- a/profil.html
+++ b/profil.html
@@ -80,6 +80,7 @@
 
 
       </div>
+      <div class="title">Kepala Department</div>
       <div class="org-structure-wrapper ">
         <div class="structure-card structure-card-co">
           <img src="img/hm/Bulat Panti&Kadep/Jesly.png" alt="">
@@ -110,12 +111,11 @@
           <h3>Felis</h3>
           <p>Kewirausahaan</p>
         </div>
-
       </div>
     </div>
 
     <div class="org-structure-item">
-      <div class="title">Pengurus Divisi</div>
+      <div class="title">Divisi</div>
       <div class="org-structure-wrapper">
 
 
@@ -123,8 +123,6 @@
           <img src="img/hm/Bulat Department/Kaderisasi.png" alt="">
           <h3>Divisi Kaderisasi</h3>
         </div>
-
-
 
         <div class="structure-card structure-card-division" onclick="location='divisi.html#divisi-pemda'">
           <img src="img/hm/Bulat Department/MinatBakat.png" alt="">
