Update, Event.html Added in front-end folder

--- a/front-end/event.html
+++ b/front-end/event.html
@@ -10,8 +10,8 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
     <!-- CSS Kel 12 -->
-    <link rel="stylesheet" href="/event.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../css/event.css">
+    <link rel="stylesheet" href="../style.css">
 
 
     <title>Events | HMIF USD</title>
@@ -20,23 +20,23 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
-      <a class="navbar-brand" href="#"><img width="200px" src="/img/hm/logo_usd.png" alt="logo"></a>
+      <a class="navbar-brand" href="#"><img width="200px" src="../img/hm/logo_usd.png" alt="logo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link fs-6 fw-bold" aria-current="page" href="/front-end/index.html">Home</a>
+            <a class="nav-link fs-6 fw-bold" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link fs-6 fw-bold" href="/front-end/profil.html">Kepengurusan</a>
+            <a class="nav-link fs-6 fw-bold" href="profil.html">Kepengurusan</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link fs-6 fw-bold" href="/front-end/event.html">Event</a>
+            <a class="nav-link fs-6 fw-bold" href="event.html">Event</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link fs-6 fw-bold" href="/front-end/profil.html">Aspirasi</a>
+            <a class="nav-link fs-6 fw-bold" href="profil.html">Aspirasi</a>
           </li>
           <li class="nav-item">
             <a class="rounded-pill btn btn-outline-warning fs-6 fw-bold">Login</a>
@@ -55,7 +55,7 @@
               <h1 id="jumbKegiatan">KEGIATAN</h1>
               <h1 id="jumbOrganisasi" >ORGANISASI</h1>
             </div>
-            <img src="/img/hm/Logo HMIF.jpg" width="200" alt="LogoHMIF">
+            <img src="../img/LogoHMIF.png" width="200" alt="LogoHMIF">
           </div>
     </div>
     
@@ -68,16 +68,16 @@
       <div class="" >
         <div class="row d-flex justify-content-center align-items-center "id="logoEvent">
           <div class="col">
-           <a href="#contents" id="porsi"><img src="img/EventHMIF/LOGOPORSI (1) (1).png" alt="Logo Porsi" class="logoKegiatan"></a>
+           <a href="#contents" id="porsi"><img src="../img/EventHMIF/LOGOPORSI (1) (1).png" alt="Logo Porsi" class="logoKegiatan"></a>
           </div>
           <div class="col ">
-           <a href="#contents" id="iasd"><img src="img/EventHMIF/Desain_tanpa_judul-removebg-preview.png" alt="Logo IASD" class="logoKegiatan"></a>
+           <a href="#contents" id="iasd"><img src="../img/EventHMIF/Desain_tanpa_judul-removebg-preview.png" alt="Logo IASD" class="logoKegiatan"></a>
           </div>
           <div class="col ">
-           <a href="#contents" id="ifb"><img src="img/EventHMIF/Logo IF Belajar.png" alt="Logo IF Belajar" class="logoKegiatan"></a>
+           <a href="#contents" id="ifb"><img src="../img/EventHMIF/Logo IF Belajar.png" alt="Logo IF Belajar" class="logoKegiatan"></a>
           </div>
           <div class="col">
-           <a href="#contents" id="itdays"><img src="img/EventHMIF/Logo IT Days Ver2.png" alt="Logo ITDays" class="logoKegiatan"></a>
+           <a href="#contents" id="itdays"><img src="../img/EventHMIF/Logo IT Days Ver2.png" alt="Logo ITDays" class="logoKegiatan"></a>
           </div>
         </div>
       </div>
@@ -282,7 +282,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4 col-sm-6">
-            <img class="footer-brand" src="img/hm/Logo HMIF remove remove.png" alt="Universitas AMIKOM Yogyakarta">
+            <img class="footer-brand" src="../img/hm/Logo HMIF remove remove.png" alt="Universitas AMIKOM Yogyakarta">
             <div class="alamat">
               <h6>UNIVERSITAS SANATA DHARMA</h6>
               <p>Jl. Paingan, Krodan, Maguwoharjo, Kec. Depok, Kabupaten Sleman, Daerah Istimewa Yogyakarta 55281</p>
