modified:   front-end/divisi.html 	modified:   front-end/event.html 	modified:   kostom.css 	modified:   style.css

--- a/front-end/divisi.html
+++ b/front-end/divisi.html
@@ -15,9 +15,11 @@
 <body>
 
     <div class="back-icon">
-        <a href="/front-end/profil.html" class="back-link">
-            <i class="fas fa-arrow-left"></i> Kembali
-        </a>
+        <button class="btn-back">
+            <a href="/front-end/profil.html" class="back-link">
+                <i class="fas fa-arrow-left"></i> Kembali
+            </a>
+        </button>
     </div>
 
     <section class="filter-division container">
